Controle de acesso por notations configurado. projeto funcionando com geracao de tkens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.flyway.baseline-version=1
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.repair-on-migrate=true
 
+#api.security.token.secret=123456
+api.security.token.secret=${JWT_SECRET:123456}
+
 #spring.data.web.pageable.page-parameter=pagina
 #spring.data.web.pageable.size-parameter=tamanho
 #spring.data.web.sort.sort-parameter=ordem
-
-##Using generated security password:
-# senha muda cada vez que o sistema eh rodado ex:303e5421-f9d1-4569-b549-ff5ff55f4876
