TESTANDO O REPOSITORY com testes automatizados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=API
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+#spring.datasource.username=${DB_USER}
+spring.datasource.username=root
+spring.datasource.password=Nina@2304
+#spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
